# llmrag

./: .gitignore  CLI_DEVELOPMENT_GUIDE.md  COLAB_GUIDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEVELOPER_GUIDE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  PIPELINE_README.md  README.md  TEAM_GUIDE.md  TESTING_GUIDE.md  TUTORIAL.md  USER_GUIDE.md  all_code.py  analyze_results.py  chapter_manager.py  cli.py  example_usage.py  install_fast.bat  install_fast.sh  ipcc_pipeline.py  log.md  main.py  pipeline_config.yaml  pipeline_requirements.txt  project.md  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  test_custom_query.py  test_improvements.py  test_ipcc_ingestion.py  test_pipeline.py  test_simple_usage.py  test_titles.py
.github/workflows/: test.yml
chroma_db/: chroma.sqlite3
configs/: default.yaml
diffs/: patch1.txt
docs/: INSTALLATION_OPTIMIZATION.md  architecture.dot  calls.dot  component_interaction.dot  information_flow.dot  information_flow_enhanced.dot  learning_journey.md  llmrag_project.py.txt  pipeline_core.dot  pipeline_flow.dot  rag_pipeline_enhanced.dot  rag_project_log.md  session2025_06_18_scraped.txt  session_2025_01_27_performance_optimization.md
llmrag/: __init__.py  chapter_rag.py  cli.py  cli.txt  main.py  streamlit_app.py
pipeline/: __init__.py  chunker.py  cleaner.py  dictionary.py  downloader.py  encyclopedia.py  quality.py  structurer.py
tests/: __init__.py  test_basic.py  test_chunking.py  test_components.py  test_embedder.py  test_ingestion.py  test_pipeline.py  test_simple.py  test_smoke.py  test_vector_store.py
(+30 files in other folders)
