[project]
name = "llmrag"
version = "0.1.0"
description = "Local RAG pipeline with chunking, embedding, and retrieval"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]